# skilllite

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml
crates/skilllite-agent/: Cargo.toml
crates/skilllite-agent/src/: chat_session.rs  evolution.rs  prompt.rs
crates/skilllite-agent/src/agent_loop/: execution.rs  helpers.rs  mod.rs
crates/skilllite-agent/src/extensions/: memory.rs  mod.rs  registry.rs
crates/skilllite-agent/src/extensions/builtin/: mod.rs
crates/skilllite-agent/src/llm/: mod.rs  tests.rs
crates/skilllite-agent/src/mcp_client/: bootstrap.rs
crates/skilllite-agent/src/skills/: executor.rs  infer_entry.rs
crates/skilllite-agent/src/types/: chat.rs  config.rs  env_config.rs
crates/skilllite-artifact/: Cargo.toml
crates/skilllite-artifact/src/: serve.rs
crates/skilllite-assistant/: README.md  package-lock.json  package.json  vite.config.ts
crates/skilllite-assistant/scripts/: dev-tauri.sh  prebuild-skilllite-dev.sh
crates/skilllite-assistant/src-tauri/: Cargo.toml  tauri.conf.json
crates/skilllite-assistant/src-tauri/src/: gateway_manager.rs  lib.rs  life_pulse.rs  uninstall.rs
crates/skilllite-assistant/src-tauri/src/commands/: chat.rs  desktop_health.rs  evolution.rs  files_and_dirs.rs  gateway.rs  life_pulse.rs  mod.rs  sessions.rs  skills_workspace.rs  uninstall.rs  workspace_editor.rs
crates/skilllite-assistant/src-tauri/src/skilllite_bridge/: bundled_skills_sync.rs  chat.rs  evolution_cli.rs  followup_suggestions.rs  mod.rs  paths.rs  workspace.rs
crates/skilllite-assistant/src-tauri/src/skilllite_bridge/integrations/: desktop_services.rs  evolution_ui.rs  mod.rs  prompt_artifact.rs  shared.rs  skill_rpc.rs
crates/skilllite-assistant/src-tauri/src/skilllite_bridge/integrations/evolution_ui/: authorize.rs  backlog.rs  config.rs  growth.rs  mod.rs  pending.rs  status.rs  trigger.rs
crates/skilllite-assistant/src-tauri/src/skilllite_bridge/local/: dotenv.rs  engine_types.rs  env_keys.rs  mcp.rs  mod.rs  paths.rs  skill_discovery.rs
crates/skilllite-assistant/src/components/: GatewayServeSettingsSection.tsx  WorkspaceFileTree.tsx
crates/skilllite-assistant/src/i18n/messages/: en.ts  zh.ts
crates/skilllite-assistant/src/stores/: useSettingsStore.ts
crates/skilllite-assistant/src/utils/: modelPresets.ts
crates/skilllite-channel/: Cargo.toml
crates/skilllite-channel/src/: feishu.rs  lib.rs  telegram.rs  types.rs
crates/skilllite-commands/: Cargo.toml
crates/skilllite-commands/src/: channel_serve.rs  evolution.rs  evolution_desktop.rs  evolution_status.rs  execute.rs  ide.rs  lib.rs  runtime.rs  suggest_followup.rs
crates/skilllite-commands/src/migrate/: mod.rs  openclaw.rs
crates/skilllite-commands/src/skill/: desktop_list.rs  mod.rs
crates/skilllite-core/: Cargo.toml
crates/skilllite-core/src/: error.rs
crates/skilllite-core/src/config/: env_keys.rs  loader.rs  schema.rs
crates/skilllite-evolution/: Cargo.toml
crates/skilllite-evolution/src/: config.rs  external_learner.rs  growth_schedule.rs  lib.rs  llm.rs  memory_learner.rs  prompt_learner.rs  run.rs  scope.rs
crates/skilllite-evolution/src/skill_synth/: generate.rs  infer.rs  mod.rs  parse.rs  refine.rs  repair.rs  validate.rs
crates/skilllite-executor/: Cargo.toml
crates/skilllite-executor/src/: memory.rs  transcript.rs
crates/skilllite-fs/src/: env_keys.rs  lib.rs  search_replace.rs
crates/skilllite-sandbox/: Cargo.toml
crates/skilllite-sandbox/src/: common.rs  linux.rs
crates/skilllite-sandbox/src/env/: runtime_deps.rs
crates/skilllite-swarm/: Cargo.toml
crates/skilllite-swarm/src/: handler.rs
docs/en/: ARCHITECTURE.md  ASSISTANT-SPLIT-ARCHITECTURE.md  ENTRYPOINTS-AND-DOMAINS.md  ENV_REFERENCE.md  GETTING_STARTED.md  START_PATHS.md
docs/zh/: ARCHITECTURE.md  ASSISTANT-SPLIT-ARCHITECTURE.md  ENTRYPOINTS-AND-DOMAINS.md  ENV_REFERENCE.md  GETTING_STARTED.md  README.md  START_PATHS.md
python-sdk/: pyproject.toml
python-sdk/skilllite/: __init__.py
skilllite/: Cargo.toml
skilllite/src/: cli.rs
skilllite/src/dispatch/: migrate.rs  mod.rs
tasks/: board.md
tasks/TASK-2026-063-extension-tool-metadata-dispatch/: CONTEXT.md  PRD.md  REVIEW.md  STATUS.md  TASK.md
tasks/TASK-2026-064-env-keys-single-source/: CONTEXT.md  PRD.md  REVIEW.md  STATUS.md  TASK.md
tasks/TASK-2026-065-openclaw-claw-migrate-mvp/: STATUS.md
tasks/TASK-2026-066-utf8-evolution-log-truncate/: CONTEXT.md  PRD.md  REVIEW.md  STATUS.md  TASK.md
tasks/TASK-2026-067-utf8-llm-error-truncate/: REVIEW.md  STATUS.md  TASK.md
