[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skilllite"
version = "0.1.29"
description = "A lightweight Skills secure execution engine - full CLI via bundled binary"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SkillLite Team", email = "skilllite@example.com"}
]
keywords = ["agent", "skills", "sandbox", "security", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/EXboys/skilllite"
Documentation = "https://github.com/EXboys/skilllite#readme"
Repository = "https://github.com/EXboys/skilllite"
Issues = "https://github.com/EXboys/skilllite/issues"

[project.scripts]
skilllite = "skilllite.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skilllite*"]

[tool.setuptools.package-data]
skilllite = ["bins/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
