[package]
name = "skilllite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "skilllite"
description = "Local-first AI agent with secure sandbox, self-evolving skills, and P2P swarm networking"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["agent", "ai", "sandbox", "llm", "skills"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["sandbox", "audit", "agent", "swarm", "artifact_http", "channel_serve", "gateway"]
sandbox = []
audit = ["skilllite-sandbox/audit", "skilllite-commands/audit", "dep:ureq"]
executor = ["sandbox", "dep:skilllite-executor"]
agent = ["executor", "dep:skilllite-agent", "skilllite-commands/agent", "dep:tokio", "dep:reqwest", "dep:rustyline", "dep:uuid"]
# 仅用于 skilllite-sandbox 构建，含 sandbox+audit，不在 default 中
sandbox_binary = ["sandbox", "audit"]
# Memory 向量检索：启用后 memory_search 使用语义搜索（需配置 embedding API）
memory_vector = ["executor", "agent", "skilllite-agent/memory_vector"]
# P2P 组网：mDNS 发现、Swarm 守护进程
swarm = ["dep:skilllite-swarm"]
# Run-scoped artifact HTTP (`skilllite artifact-serve`). Compiled in by default; binding requires
# `SKILLLITE_ARTIFACT_SERVE_ALLOW=1` at runtime (see `dispatch/artifact.rs`). Not in sandbox-only binary.
artifact_http = ["dep:skilllite-artifact", "dep:tokio"]
# Inbound webhook HTTP (`skilllite channel serve`); implemented in skilllite-commands, no skilllite-gateway crate.
channel_serve = ["skilllite-commands/channel_serve"]
# Unified HTTP host (`skilllite gateway serve`) for health, inbound webhook, and optional artifact routes.
gateway = ["artifact_http", "channel_serve", "dep:axum", "dep:tower-http"]

[dependencies]
skilllite-core = { path = "../crates/skilllite-core", version = "0.1.29" }
skilllite-sandbox = { path = "../crates/skilllite-sandbox", version = "0.1.29" }
skilllite-commands = { path = "../crates/skilllite-commands", version = "0.1.29", default-features = false }
skilllite-executor = { path = "../crates/skilllite-executor", version = "0.1.29", optional = true }
skilllite-agent = { path = "../crates/skilllite-agent", version = "0.1.29", optional = true }
skilllite-swarm = { path = "../crates/skilllite-swarm", version = "0.1.29", optional = true }
skilllite-artifact = { path = "../crates/skilllite-artifact", version = "0.1.29", optional = true, default-features = false, features = ["local", "server"] }

clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror.workspace = true
tracing = "0.1"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
axum = { version = "0.7", optional = true, features = ["json"] }
tower-http = { version = "0.5", optional = true, features = ["trace"] }

# Agent feature deps re-exported for commands that use them directly
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "time", "io-util", "process", "net"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "stream", "rustls-tls"] }
rustyline = { version = "14", optional = true }
uuid = { version = "1", optional = true, features = ["v4"] }

# Audit feature: lightweight sync HTTP client for ClawHub registry
ureq = { version = "2", optional = true, features = ["json"] }

# ClawHub registry: zip extraction for skill bundles
zip = "0.6"

# IPC daemon: thread pool for concurrent request handling
rayon = "1.10"

[[bin]]
name = "skilllite"
path = "src/main.rs"

# skilllite-sandbox: 沙箱 + MCP，无 executor/agent。
# 构建: cargo build -p skilllite --bin skilllite-sandbox --no-default-features --features sandbox_binary
[[bin]]
name = "skilllite-sandbox"
path = "src/bin/skilllite-sandbox.rs"
required-features = ["sandbox_binary"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
