[package]
name = "skilllite-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LLM-powered autonomous agent with tool calling, multi-turn chat, planning, and extensible skills"
keywords = ["agent", "ai", "llm", "tool-calling", "chat"]
categories = ["development-tools", "asynchronous"]

[features]
default = []
memory_vector = ["dep:sqlite-vec", "dep:zerocopy", "skilllite-executor/memory_vector"]
async-resolve = []

[dependencies]
skilllite-artifact = { path = "../skilllite-artifact", version = "0.1.28", default-features = false, features = ["local"] }
skilllite-core = { path = "../skilllite-core", version = "0.1.28", features = ["async-resolve"] }
skilllite-evolution = { path = "../skilllite-evolution", version = "0.1.28" }
skilllite-fs = { path = "../skilllite-fs", version = "0.1.28" }
skilllite-sandbox = { path = "../skilllite-sandbox", version = "0.1.28" }
skilllite-executor = { path = "../skilllite-executor", version = "0.1.28" }

async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror.workspace = true
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
tracing = "0.1"
lazy_static = "1.4"
uuid = { version = "1", features = ["v4"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "process"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = { version = "0.3" }
rustyline = { version = "14" }
rusqlite = { version = "0.31", features = ["bundled"] }

# memory_vector feature
sqlite-vec = { version = "0.1", optional = true }
zerocopy = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = "3.10"
ctor = "0.10"
