[package]
name = "skilllite-artifact"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Run-scoped ArtifactStore implementations: local directory, HTTP server, HTTP client"
keywords = ["artifact", "http", "openapi", "skilllite"]
categories = ["development-tools", "web-programming"]

[features]
default = ["local", "server", "client"]
local = []
server = ["dep:axum", "dep:tokio", "dep:tower"]
client = ["dep:reqwest"]

[dependencies]
anyhow = "1.0"
skilllite-core = { path = "../skilllite-core", version = "0.1.29" }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tracing = "0.1"

axum = { version = "0.7", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"], optional = true }
tower = { version = "0.5", optional = true }

reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
