[package]
name = "skilllite-commands"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI commands for SkillLite — skill management, agent chat, security audit, workspace operations"
keywords = ["cli", "agent", "skills", "sandbox", "ai"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
agent = ["dep:skilllite-agent", "dep:tokio", "dep:uuid", "dep:rustyline", "skilllite-core/async-resolve"]
audit = ["skilllite-sandbox/audit", "dep:ureq"]
# Inbound webhook HTTP (`skilllite channel serve`); optional DingTalk echo via env (see channel_serve.rs).
channel_serve = [
    "dep:skilllite-channel",
    "dep:tokio",
    "dep:axum",
    "dep:tower-http",
]

[dependencies]
skilllite-core = { path = "../skilllite-core", version = "0.1.29", features = ["async-resolve"] }
skilllite-fs = { path = "../skilllite-fs", version = "0.1.29" }
skilllite-evolution = { path = "../skilllite-evolution", version = "0.1.29" }
skilllite-sandbox = { path = "../skilllite-sandbox", version = "0.1.29" }
skilllite-executor = { path = "../skilllite-executor", version = "0.1.29" }
skilllite-agent = { path = "../skilllite-agent", version = "0.1.29", optional = true }
skilllite-channel = { path = "../skilllite-channel", version = "0.1.29", optional = true, default-features = true }

anyhow = "1.0"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
walkdir = "2.5"
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
tracing = "0.1"
regex = "1.10"
dirs = "5.0"
tempfile = "3.10"
zip = "0.6"
ureq = { version = "2", optional = true, features = ["json"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "time", "io-util", "net"] }
axum = { version = "0.7", optional = true, features = ["json"] }
tower-http = { version = "0.5", optional = true, features = ["trace"] }
uuid = { version = "1", optional = true, features = ["v4"] }
rustyline = { version = "14", optional = true }
thiserror.workspace = true
