[package]
name = "skilllite-evolution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Self-evolving AI agent engine — auto-improves prompts, skills, and memory from usage patterns"
keywords = ["ai", "self-evolving", "agent", "memory", "llm"]
categories = ["development-tools", "algorithms"]

[dependencies]
skilllite-core = { path = "../skilllite-core", version = "0.1.29" }
skilllite-fs = { path = "../skilllite-fs", version = "0.1.29" }
skilllite-sandbox = { path = "../skilllite-sandbox", version = "0.1.29" }

async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util"] }
dirs = "5.0"
tempfile = "3.10"
uuid = { version = "1", features = ["v4"] }
regex = "1.10"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.10"
