[package]
name = "skilllite-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent execution runtime — session management, conversation transcript, persistent memory with SQLite"
keywords = ["agent", "session", "memory", "transcript", "executor"]
categories = ["development-tools"]

[features]
default = []
memory_vector = ["dep:sqlite-vec", "dep:zerocopy"]

[dependencies]
skilllite-core = { path = "../skilllite-core", version = "0.1.29" }
skilllite-fs = { path = "../skilllite-fs", version = "0.1.29" }
anyhow = "1.0"
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# memory_vector feature
sqlite-vec = { version = "0.1", optional = true }
zerocopy = { version = "0.7", optional = true }
