[package]
name = "skilllite-swarm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "P2P swarm networking for AI agents — mDNS discovery, capability-based routing, distributed task delegation"
keywords = ["p2p", "swarm", "distributed", "agent", "mdns"]
categories = ["network-programming", "concurrency"]

[dependencies]
skilllite-core = { path = "../skilllite-core", version = "0.1.29" }
mdns-sd = "0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "rt", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
local-ip-address = "0.6"
ctrlc = "3"
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
urlencoding = "2"
futures-util = "0.3"
bytes = "1.0"
thiserror.workspace = true
