[package]
name = "skilllite-assistant"
version = "0.1.28"
description = "SkillLite Desktop Assistant — local-first AI agent with secure sandbox and self-evolving skills"
authors = ["SkillLite Contributors"]
license = "MIT"
repository = "https://github.com/EXboys/skilllite"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset", "tray-icon"] }
skilllite-core = { path = "../../skilllite-core" }
skilllite-evolution = { path = "../../skilllite-evolution" }
skilllite-sandbox = { path = "../../skilllite-sandbox" }
skilllite-agent = { path = "../../skilllite-agent" }
skilllite-fs = { path = "../../skilllite-fs" }
dirs = "5"
chrono = "0.4"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7"
base64 = "0.22"
semver = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
ureq = { version = "2", features = ["json"] }
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
